correct js bug, added media queries, shall be all fine

--- a/website/index.html
+++ b/website/index.html
@@ -27,9 +27,11 @@
         <div class="holder-entry">
             <h2>Most Recent Entry</h2>
             <div id="entryHolder">
-                <div id="date"></div>
-                <div id="temp"></div>
-                <div id="content"></div>
+                <div class="text">
+                    <div id="date"></div>
+                    <div id="temp"></div>
+                    <div id="content"></div>
+                </div>
             </div>
         </div>
     </div>
